[gd_scene load_steps=6 format=3 uid="uid://c7kegqgu0ylkc"]

[ext_resource type="Script" path="res://scenes/mainmenue/level_select.gd" id="1_3glp3"]
[ext_resource type="Texture2D" uid="uid://jodkoy0q3to6" path="res://assets/art/backgrounds/tx_bg_room01.png" id="2_x5hs6"]
[ext_resource type="Theme" uid="uid://d2egigf8uvin0" path="res://scenes/mainmenue/main_menu.tres" id="3_xsfdl"]
[ext_resource type="AudioStream" uid="uid://c3gdgnx1jpq4i" path="res://assets/sounds/music/BUBBLEMAN_Ukulele_3_short.wav" id="4_8yhx0"]

[sub_resource type="SystemFont" id="SystemFont_okf44"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="Level_Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3glp3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x5hs6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_okf44")
theme_override_font_sizes/font_size = 64
text = "Bikini Toppom Moving Service GGJ25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xsfdl")
theme_override_constants/separation = 18
alignment = 1

[node name="Tutorial" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial Level"

[node name="Level 1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "EZPZ"

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level 2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Jump 2 Win"

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level 3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Columns"

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level 4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "High like a kite"

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level 5" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tricky"

[node name="Seperator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level 6" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Skull Stare"

[node name="Seperator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Back to Menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BubblemanUkulele3Short" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("4_8yhx0")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Level 6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back to Menu" to="." method="_on_back_to_menu_pressed"]
